--- a/.jshintrc
+++ b/.jshintrc
@@ -1,26 +1,27 @@
 {
-  "boss": true,
-  "curly": true,
-  "eqeqeq": true,
-  "eqnull": true,
-  "expr": true,
-  "noarg": true,
-  "onevar": true,
-  "trailing": true,
-  "undef": true,
-  "unused": true,
-  "browser": true,
-  "passfail": false,  // Stop on first error.
-  "devel": true,
-  "esnext": true,
+	"boss": true,
+	"curly": true,
+	"eqeqeq": true,
+	"eqnull": true,
+	"es3": true,
+	"expr": true,
+	"immed": true,
+	"noarg": true,
+	"onevar": true,
+	"quotmark": "single",
+	"trailing": true,
+	"undef": true,
+	"unused": true,
+	"node": true,
 
-  "globals": {
-    "jQuery": false,
-    "$": false,
-    "JSON": false,
-    "wp": false,
-    "Vue": false,
-    "swal": false,
-    "erpMailpoetGlobal": false
-  }
+	"browser": true,
+
+	"globals": {
+		"_": false,
+		"Backbone": false,
+		"jQuery": false,
+		"JSON": false,
+		"wp": false,
+		"wc_serial_number_pro":false
+	}
 }
