--- a/package.json
+++ b/package.json
@@ -9,24 +9,54 @@
     "email": "support@pluginever.com",
     "url": "http://pluginever.com"
   },
-  "devDependencies": {
-    "grunt": "^1.0.3",
-    "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-compress": "^1.4.3",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^2.2.0",
-    "grunt-contrib-imagemin": "^2.0.1",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-nodeunit": "^1.0.0",
-    "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "^3.4.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-livereload": "^0.1.3",
-    "grunt-notify": "^0.4.5",
-    "grunt-phpcs": "^0.4.0",
-    "grunt-wp-i18n": "^1.0.0",
-    "jshint-stylish": "^2.2.1"
+  "engines": {
+    "node": ">=8.9.3",
+    "npm": ">=5.5.1"
   },
-  "keywords": []
+  "scripts": {
+    "build": "grunt",
+    "build-watch": "grunt watch",
+    "block:start": "webpack --watch",
+    "block:build": "webpack --mode production",
+    "block:dev": "webpack"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/preset-env": "^7.4.3",
+    "autoprefixer": "~8.6.2",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.14.0",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-2": "^6.13.0",
+    "config": "^1.24.0",
+    "cross-env": "^5.1.6",
+    "grunt": "^1.0.3",
+    "grunt-checktextdomain": "~1.0.1",
+    "grunt-contrib-clean": "~1.1.0",
+    "grunt-contrib-compress": "^1.4.3",
+    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "~2.2.1",
+    "grunt-contrib-jshint": "~1.1.0",
+    "grunt-contrib-uglify": "~3.3.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-phpcs": "~0.4.0",
+    "grunt-postcss": "~0.9.0",
+    "grunt-prompt": "^1.3.3",
+    "grunt-sass": "~2.1.0",
+    "grunt-stylelint": "~0.10.0",
+    "grunt-wp-i18n": "~1.0.1",
+    "stylelint": "~9.2.1",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0"
+  },
+  "keywords": [],
+  "dependencies": {
+    "dompurify": "^1.0.10"
+  }
 }
