--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "woocommerce-category-showcase",
   "title": "WooCommerce Category Showcase",
   "description": "The best WordPress plugin ever made!",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "homepage": "http://pluginever.com",
   "author": {
     "name": "PluginEver",
@@ -15,21 +15,13 @@
   },
   "scripts": {
     "build": "grunt",
-    "build-watch": "grunt watch",
-    "block:start": "webpack --watch",
-    "block:build": "webpack --mode production",
-    "block:dev": "webpack"
+    "build-watch": "grunt watch"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/preset-env": "^7.4.3",
     "autoprefixer": "~8.6.2",
     "babel": "^6.5.2",
     "babel-cli": "^6.14.0",
     "babel-eslint": "^8.2.3",
-    "babel-loader": "^8.0.5",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-2": "^6.13.0",
@@ -51,12 +43,7 @@
     "grunt-sass": "~2.1.0",
     "grunt-stylelint": "~0.10.0",
     "grunt-wp-i18n": "~1.0.1",
-    "stylelint": "~9.2.1",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0"
+    "stylelint": "~9.2.1"
   },
-  "keywords": [],
-  "dependencies": {
-    "dompurify": "^1.0.10"
-  }
+  "keywords": []
 }
