update the plugin release functions

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "build": "grunt build",
-    "build-watch": "grunt watch"
+    "build-watch": "grunt watch",
+    "build:test": "grunt shell"
   },
   "dependencies": {},
   "devDependencies": {
@@ -30,9 +31,14 @@
     "grunt-postcss": "~0.9.0",
     "grunt-prompt": "^1.3.3",
     "grunt-sass": "^3.1.0",
+    "grunt-shell": "^3.0.1",
     "grunt-wp-i18n": "~1.0.1",
     "load-grunt-tasks": "^5.1.0",
     "node-sass": "^7.0.0"
   },
-  "keywords": []
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "IE 10"
+  ]
 }
