--- a/.github/workflows/plugin-deploy.yml
+++ b/.github/workflows/plugin-deploy.yml
@@ -26,5 +26,5 @@ jobs:
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ${{ steps.build.outputs.zip_path }}
-          asset_name: ${{ steps.build.outputs.zip_name }}.zip
+          asset_name: ${{ github.event.repository.name }}.zip
           asset_content_type: application/zip
