--- a/package.json
+++ b/package.json
@@ -13,40 +13,58 @@
     "node": ">=8.9.3",
     "npm": ">=5.5.1"
   },
-  "scripts": {
-    "build": "grunt",
-    "build-watch": "grunt watch",
-    "block:start": "webpack --watch",
-    "block:build": "webpack --mode production",
-    "block:dev": "webpack"
+  "dependencies": {
+    "a11y-dialog": "^7.3.0",
+    "prettier": "^2.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "read-pkg": "^7.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.3",
-    "babel": "^6.5.2",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-add-module-exports": "^1.0.4",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "config": "^3.3.3",
-    "cross-env": "^7.0.3",
-    "grunt": "^1.3.0",
-    "grunt-checktextdomain": "~1.0.1",
-    "grunt-contrib-clean": "~2.0.0",
-    "grunt-contrib-compress": "^2.0.0",
-    "grunt-contrib-concat": "~1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "~3.0.0",
-    "grunt-contrib-jshint": "~3.0.0",
-    "grunt-contrib-uglify": "~5.0.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-phpcs": "~0.4.0",
-    "grunt-postcss": "~0.9.0",
-    "grunt-prompt": "^1.3.3",
-    "grunt-sass": "~3.1.0",
-    "grunt-stylelint": "~0.16.0",
-    "grunt-wp-i18n": "~1.0.3",
-    "stylelint": "~13.9.0"
+    "@byteever/scripts": "git+ssh://git@github.com/byteever/scripts.git",
+    "grunt": "^1.4.1",
+    "grunt-checktextdomain": "^1.0.1",
+    "grunt-shell": "^3.0.1",
+    "grunt-wp-i18n": "^1.0.3",
+    "husky": "^4.3.8",
+    "lint-staged": "^12.3.2",
+    "matchdep": "^2.0.0"
   },
-  "keywords": []
+  "scripts": {
+    "watch": "byteever-scripts start --webpack-no-externals",
+    "build": "byteever-scripts build && grunt build",
+    "format": "byteever-scripts format-js",
+    "lint": "npm run lint:js && npm run lint:css && npm run lint:pkg-json && npm run lint:md",
+    "lint:js": "byteever-scripts lint-js  --fix",
+    "lint:css": "byteever-scripts lint-style --fix",
+    "lint:pkg-json": "byteever-scripts lint-pkg-json",
+    "lint:md": "byteever-scripts lint-md-docs",
+    "analyze-bundles": "byteever-scripts build --webpack-bundle-analyzer",
+    "check-engines": "byteever-scripts check-engines",
+    "check-licenses": "byteever-scripts check-licenses",
+    "packages-update": "byteever-scripts packages-update",
+    "test:e2e": "byteever-scripts test-e2e",
+    "test:unit": "byteever-scripts test-unit-js"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.php": [
+      "php -d display_errors=1 -l",
+      "./vendor/bin/phpcs --extensions=php --warning-severity=8 -s"
+    ],
+    "*.scss": [
+      "npm run lint:css"
+    ],
+    "*.{js, jsx}": [
+      "npm run lint:js"
+    ]
+  },
+  "browserslist": [
+    "last 2 version",
+    "> 1%",
+    "IE 10"
+  ]
 }
