--- a/package.json
+++ b/package.json
@@ -14,39 +14,30 @@
     "npm": ">=5.5.1"
   },
   "scripts": {
-    "build": "grunt",
-    "build-watch": "grunt watch",
-    "block:start": "webpack --watch",
-    "block:build": "webpack --mode production",
-    "block:dev": "webpack"
+    "build": "grunt build",
+    "watch": "grunt watch"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.3",
-    "babel": "^6.5.2",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-add-module-exports": "^1.0.4",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "config": "^3.3.3",
-    "cross-env": "^7.0.3",
-    "grunt": "^1.3.0",
+    "autoprefixer": "^9.8.8",
+    "grunt": "^1.4.1",
     "grunt-checktextdomain": "~1.0.1",
-    "grunt-contrib-clean": "~2.0.0",
-    "grunt-contrib-compress": "^2.0.0",
-    "grunt-contrib-concat": "~1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "~3.0.0",
-    "grunt-contrib-jshint": "~3.0.0",
-    "grunt-contrib-uglify": "~5.0.0",
+    "grunt-contrib-concat": "^2.0.0",
+    "grunt-contrib-cssmin": "^4.0.0",
+    "grunt-contrib-jshint": "^3.1.1",
+    "grunt-contrib-uglify": "^5.0.1",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-phpcs": "~0.4.0",
     "grunt-postcss": "~0.9.0",
     "grunt-prompt": "^1.3.3",
-    "grunt-sass": "~3.1.0",
-    "grunt-stylelint": "~0.16.0",
-    "grunt-wp-i18n": "~1.0.3",
-    "stylelint": "~13.9.0"
+    "grunt-sass": "^3.1.0",
+    "grunt-wp-i18n": "~1.0.1",
+    "load-grunt-tasks": "^5.1.0",
+    "matchdep": "^2.0.0",
+    "node-sass": "^7.0.0",
+    "postcss": "^8.4.14"
   },
-  "keywords": []
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "IE 10"
+  ]
 }
