--- a/composer.json
+++ b/composer.json
@@ -6,20 +6,7 @@
   "license": "GPL-3.0-or-later",
   "prefer-stable": true,
   "minimum-stability": "dev",
-  "repositories": [
-    {
-      "url": "git@github.com:pluginever/framework-plugin.git",
-      "type": "github"
-    },
-    {
-      "url": "git@github.com:pluginever/framework-data.git",
-      "type": "github"
-    },
-    {
-      "url": "git@github.com:pluginever/framework-settings.git",
-      "type": "github"
-    }
-  ],
+  "repositories": [],
   "require": {
     "php": ">=7.4"
   },
@@ -37,10 +24,7 @@
     "coenjacobs/mozart": "^0.7.1",
     "level-level/wp-browser-woocommerce": "^0.1.8",
     "lucatume/wp-browser": "^3.1",
-    "phpcompatibility/php-compatibility": "9.3.5",
-    "pluginever/framework-plugin": "dev-master",
-    "pluginever/framework-data": "dev-master",
-    "pluginever/framework-settings": "dev-master"
+    "phpcompatibility/php-compatibility": "9.3.5"
   },
   "config": {
     "optimize-autoloader": true,
@@ -84,11 +68,7 @@
       "classmap_directory": "/lib/classes/",
       "classmap_prefix": "WooCommerceCategoryShowcase_",
       "delete_vendor_directories": true,
-      "packages": [
-        "pluginever/framework-plugin",
-        "pluginever/framework-settings",
-        "pluginever/framework-data"
-      ]
+      "packages": []
     }
   }
 }
