cleanup plugin files

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,10 @@
   },
   "autoload": {
     "psr-4": {
-      "WooCommerceCategoryShowcase\\": "includes/"
+      "WooCommerceCategoryShowcase\\": [
+        "includes/",
+        "lib/"
+      ]
     }
   },
   "require-dev": {
