--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "copy-webpack-plugin": "^12.0.2",
     "mini-css-extract-plugin": "^2.7.6",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-inner-border": "^0.2.0",
     "webpack-remove-empty-scripts": "^1.0.4",
     "webpack-rtl-plugin": "^2.0.0",
     "wp-prettier": "^2.8.5"
   },
   "scripts": {
     "build": "wp-scripts build",
-    "watch": "npx tailwindcss -i ./src/css/common/tailwind.css -o ./assets/css/tailwind.css --watch",
+    "start": "wp-scripts start",
     "check-engines": "wp-scripts check-engines",
     "check-licenses": "wp-scripts check-licenses",
     "format": "wp-scripts format",
