--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "tailwindcss": "^3.4.3",
     "tailwindcss-inner-border": "^0.2.0",
     "webpack-remove-empty-scripts": "^1.0.4",
-    "webpack-rtl-plugin": "^2.0.0",
+    "webpack-rtl-plugin": "^1.3.0",
     "wp-prettier": "^2.8.5"
   },
   "scripts": {
@@ -42,6 +42,7 @@
     "> 1%"
   ],
   "dependencies": {
+    "@splidejs/splide": "^4.1.4",
     "cssnano": "^7.0.1"
   }
 }
