--- a/package.json
+++ b/package.json
@@ -9,13 +9,9 @@
     "email": "support@pluginever.com",
     "url": "http://pluginever.com"
   },
-  "engines": {
-    "node": ">=8.9.3",
-    "npm": ">=5.5.1"
-  },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
-    "@wordpress/scripts": "^27.7.0",
+    "@wordpress/scripts": "^28.2.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "tailwindcss": "^3.4.3",
@@ -42,6 +38,10 @@
   "dependencies": {
     "@splidejs/splide": "^4.1.4",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
-    "@splidejs/splide-extension-grid": "^0.4.1"
+    "@splidejs/splide-extension-grid": "^0.4.1",
+    "and": "^0.0.3",
+    "build": "^0.1.4",
+    "npm": "^10.8.2",
+    "run": "^1.5.0"
   }
 }
