--- a/.distignore
+++ b/.distignore
@@ -19,6 +19,7 @@ composer.json
 npm-debug.log
 node_modules
 postcss.config.js
+tailwind.config.js
 babel.config.js
 package.json
 package-lock.json
