--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "title": "WooCommerce Category Showcase",
   "description": "WooCommerce extension to showcase categories in interactive slider blocks.",
   "version": "2.0.5",
-  "homepage": "http://pluginever.com",
+  "homepage": "http://pluginever.com/plugins/woocommerce-category-showcase-pro/",
   "author": {
     "name": "PluginEver",
     "email": "support@pluginever.com",
