--- a/.distignore
+++ b/.distignore
@@ -8,42 +8,38 @@
 .gitkeep
 .gitmodules
 .husky
+
+# Documentation files
 readme.md
 README.md
 
 # Composer related files
-composer.lock
-composer.json
+composer.*
 
 # NPM related files
 npm-debug.log
-node_modules
-postcss.config.js
-tailwind.config.js
-babel.config.js
+/node_modules/
 package.json
 package-lock.json
+yarn.lock
+
+# Build related files
+postcss.config.js
+babel.config.js
 gruntfile.js
 Gruntfile.js
 webpack.config.js
-yarn.lock
-bower.json
-bower_components
-.*
-
+tailwind.config.js
 
 # Test related files
 phpunit.xml
 phpunit.xml.dist
 tests
-.dist
-codeception.yml
 *.yml
 
 # PHPCS related files
 phpcs.xml
 phpcs.xml.dist
-
 
 # IDE related files
 .idea
@@ -54,12 +50,15 @@ phpcs.xml.dist
 *.tmproj
 *.vscode
 
-# Misc files
+# Miscellaneous files and folders
+.*
+.*/
+*.lock
 *.log
 *.sh
-bin
+*.zip
 
-# OS related files
+# OS specific files
 .DS_Store
 .DS_Store?
 ._*
@@ -68,12 +67,13 @@ bin
 ehthumbs.db
 Thumbs.db
 
-
 # Action related files
 .wordpress-org
 
-#Assets
+# Binary and other directories
+/bin/
+
+# Asset related files
 *.scss
 *.*.map
-
-# Build related files
+/assets
