--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@splidejs/splide-extension-grid": "^0.4.1"
   },
   "scripts": {
-    "build": "wp-scripts build --webpack-src-dir=.assets && grunt build",
+    "build": "wp-scripts build --webpack-src-dir=assets && grunt build",
     "check-engines": "wp-scripts check-engines",
     "check-licenses": "wp-scripts check-licenses",
     "format": "wp-scripts format",
@@ -36,7 +36,7 @@
     "lint:md:docs": "wp-scripts lint-md-docs",
     "lint:pkg-json": "wp-scripts lint-pkg-json",
     "plugin-zip": "wp-scripts plugin-zip",
-    "start": "wp-scripts start --webpack-src-dir=.assets",
+    "start": "wp-scripts start --webpack-src-dir=assets",
     "test:e2e": "wp-scripts test-e2e",
     "test:unit": "wp-scripts test-unit-js",
     "packages-update": "wp-scripts packages-update"
