--- a/package.json
+++ b/package.json
@@ -10,12 +10,24 @@
     "url": "https://pluginever.com"
   },
   "scripts": {
-    "build": "wp-scripts build --webpack-copy-php",
-    "start": "wp-scripts start --webpack-copy-php"
+    "build": "wp-scripts build --webpack-src-dir=resources && grunt build",
+    "check-engines": "wp-scripts check-engines",
+    "check-licenses": "wp-scripts check-licenses",
+    "format": "wp-scripts format",
+    "packages-update": "wp-scripts packages-update",
+    "plugin-zip": "wp-scripts plugin-zip",
+    "start": "wp-scripts start --webpack-src-dir=resources"
   },
   "devDependencies": {
+    "@lodder/time-grunt": "^4.0.0",
     "@wordpress/scripts": "^30.10.0",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
+    "grunt": "^1.6.1",
+    "grunt-checktextdomain": "^1.0.1",
+    "grunt-wp-i18n": "^1.0.3",
+    "grunt-wp-readme-to-markdown": "^2.1.0",
+    "load-grunt-tasks": "^5.1.0",
     "path": "^0.12.7",
     "tailwindcss": "^3.4.17",
     "webpack-remove-empty-scripts": "^1.0.4",
