--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "byteever/bytekit-plugin": "^1.0"
   },
   "require-dev": {
-    "byteever/byteever-sniffs": "dev-master"
+    "byteever/byteever-sniffs": "^1.1"
   },
   "autoload" : {
     "psr-4" : {
