Update plugin description

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "pluginever/wc-category-showcase",
-  "description": "WooCommerce extension to showcase categories in various styles and layouts.",
+  "description": "WooCommerce extension to showcase categories in various styles and layouts like sliders, blocks, and grids.",
   "homepage": "https://pluginever.com/plugins/woocommerce-category-showcase-pro/",
   "type": "wordpress-plugin",
   "license": "GPL-2.0-or-later",
