--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wc-category-showcase",
   "title": "WooCommerce Category Showcase",
-  "description": "WooCommerce extension to showcase categories in various styles and layouts.",
+  "description": "WooCommerce extension to showcase categories in various styles and layouts like sliders, blocks, and grids.",
   "version": "2.2.1",
   "homepage": "https://pluginever.com/plugins/woocommerce-category-showcase-pro/",
   "author": {
