--- a/composer.json
+++ b/composer.json
@@ -1,58 +1,54 @@
 {
-  "name": "pluginever/wc-category-showcase",
-  "description": "WooCommerce extension to showcase categories in various styles and layouts like sliders, blocks, and grids.",
-  "homepage": "https://pluginever.com/plugins/woocommerce-category-showcase-pro/",
-  "type": "wordpress-plugin",
-  "license": "GPL v2 or later",
-  "prefer-stable": true,
-  "minimum-stability": "dev",
-  "require": {
-    "php": ">=7.4",
-    "byteever/bytekit-plugin": "^1.0"
-  },
-  "require-dev": {
-    "byteever/byteever-sniffs": "^1.1"
-  },
-  "autoload": {
-    "psr-4": {
-      "WooCommerceCategoryShowcase\\": "includes/"
-    }
-  },
-  "autoload-dev": {},
-  "config": {
-    "optimize-autoloader": true,
-    "sort-packages": true,
-    "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true
-    }
-  },
-  "repositories": [
-    {
-      "type": "github",
-      "url": "git@github.com:byteever/bytekit-plugin.git"
-    }
-  ],
-  "scripts": {
-    "post-install-cmd":"@strauss",
-    "post-update-cmd": "@strauss",
-    "phpcs": "@php ./vendor/bin/phpcs --standard=phpcs.xml -s -v",
-    "phpcbf": "@php ./vendor/bin/phpcbf --standard=phpcs.xml -v",
-    "strauss": [
-      "test -f ./bin/strauss.phar || curl -o bin/strauss.phar -L -C - https://github.com/BrianHenryIE/strauss/releases/download/0.24.1/strauss.phar",
-      "@php bin/strauss.phar",
-      "@composer dump-autoload"
-    ]
-  },
-  "extra": {
-    "strauss": {
-      "target_directory": "vendor-prefixed",
-      "classmap_prefix": "WooCommerceCategoryShowcase__",
-      "namespace_prefix": "WooCommerceCategoryShowcase",
-      "delete_vendor_packages": true,
-      "delete_vendor_files": true,
-      "packages": [
-        "byteever/bytekit-plugin"
-      ]
-    }
-  }
+	"name": "pluginever/wc-category-showcase",
+	"type": "wordpress-plugin",
+	"license": "GPL-2.0-or-later",
+	"repositories": [
+		{
+			"type": "vcs",
+			"url": "git@github.com:byteever/bytekit-plugin.git"
+		}
+	],
+	"require": {
+		"php": ">=7.4",
+		"byteever/bytekit-plugin": "dev-trunk"
+	},
+	"require-dev": {
+		"byteever/byteever-sniffs": "^1.1.3"
+	},
+	"autoload": {
+		"psr-4": {
+			"WooCommerceCategoryShowcase\\": "includes/"
+		}
+	},
+	"config": {
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
+	},
+	"scripts": {
+		"post-install-cmd": "@strauss",
+		"post-update-cmd": "@strauss",
+		"post-autoload-dump": "test -f /tmp/strauss.phar && php /tmp/strauss.phar include-autoloader || true",
+		"makepot": "wp --allow-root i18n make-pot . --include=*.php,assets,includes,templates --domain=starter-plugin",
+		"phpcs": "php ./vendor/bin/phpcs --standard=phpcs.xml -s -v",
+		"phpcbf": "php ./vendor/bin/phpcbf --standard=phpcs.xml -v",
+		"test:setup": "bash ./bin/setup-tests.sh wordpress_test root root localhost trunk && phpunit",
+		"test": "phpunit",
+		"strauss": [
+			"test -f /tmp/strauss.phar || curl -o /tmp/strauss.phar -L https://github.com/BrianHenryIE/strauss/releases/download/0.24.1/strauss.phar",
+			"@php /tmp/strauss.phar",
+			"@composer dump-autoload --no-scripts",
+			"find ./vendor/byteever -type f -name '*.php' -exec perl -i -pe \"s/'bytekit-textdomain'/'starter-plugin'/g\" {} +"
+		]
+	},
+	"extra": {
+		"strauss": {
+			"target_directory": "vendor",
+			"namespace_prefix": "WooCommerceCategoryShowcase\\",
+			"classmap_prefix": "WooCommerceCategoryShowcase__",
+			"packages": [
+				"byteever/bytekit-plugin"
+			]
+		}
+	}
 }
