--- a/package.json
+++ b/package.json
@@ -1,41 +1,66 @@
 {
-  "name": "wc-category-showcase",
-  "title": "WooCommerce Category Showcase",
-  "description": "WooCommerce extension to showcase categories in various styles and layouts like sliders, blocks, and grids.",
-  "version": "2.2.8",
-  "homepage": "https://pluginever.com/plugins/woocommerce-category-showcase-pro/",
-  "scripts": {
-    "build": "wp-scripts build --webpack-src-dir=resources && grunt build",
-    "check-engines": "wp-scripts check-engines",
-    "check-licenses": "wp-scripts check-licenses",
-    "format": "wp-scripts format",
-    "packages-update": "wp-scripts packages-update",
-    "plugin-zip": "wp-scripts plugin-zip",
-    "start": "wp-scripts start --webpack-src-dir=resources"
-  },
-  "devDependencies": {
-    "@lodder/time-grunt": "^4.0.0",
-    "@wordpress/scripts": "^31.0.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^12.0.2",
-    "grunt": "^1.6.1",
-    "grunt-checktextdomain": "^1.0.1",
-    "grunt-wp-i18n": "^1.0.3",
-    "grunt-wp-readme-to-markdown": "^2.1.0",
-    "load-grunt-tasks": "^5.1.0",
-    "path": "^0.12.7",
-    "tailwindcss": "^3.4.17",
-    "webpack-remove-empty-scripts": "^1.0.4",
-    "@splidejs/splide": "^4.1.4",
-    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
-    "@splidejs/splide-extension-grid": "^0.4.1"
-  },
-  "dependencies": {
-    "tailwindcss-inner-border": "^0.2.0"
-  },
-  "browserslist": [
-    "> 0.1%",
-    "ie 8",
-    "ie 9"
-  ]
+	"name": "wc-category-showcase",
+	"version": "2.2.8",
+	"description": "WooCommerce extension to showcase categories in various styles and layouts like sliders, blocks, and grids.",
+	"author": "ByteEver Team",
+	"license": "GPL-2.0-or-later",
+	"homepage": "https://pluginever.com/plugins/woocommerce-category-showcase-pro/",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/pluginever/wc-category-showcase.git"
+	},
+	"bugs": {
+		"url": "https://github.com/pluginever/wc-category-showcase/issues"
+	},
+	"engines": {	
+		"node": ">=20.11.1"
+	},
+	"dependencies": {
+		"tailwindcss-inner-border": "^0.2.0"
+	},
+	"devDependencies": {
+		"@byteever/scripts": "^3.0.2",
+		"@wordpress/browserslist-config": "^6.33.0",
+		"@wordpress/prettier-config": "^4.33.0",
+		"@wordpress/scripts": "^31.1.0",
+		"tailwindcss": "^3.4.17",
+		"@splidejs/splide": "^4.1.4",
+		"@splidejs/splide-extension-auto-scroll": "^0.5.3",
+		"@splidejs/splide-extension-grid": "^0.4.1"
+	},
+	"scripts": {
+		"build": "wp-scripts build && composer run makepot",
+		"build:wp": "wp-scripts build && composer run makepot",
+		"start": "wp-scripts start",
+		"lint": "npm run lint:js && npm run lint:css",
+		"lint:js": "wp-scripts lint-js",
+		"lint:css": "wp-scripts lint-style",
+		"lint:pkg-json": "wp-scripts lint-pkg-json",
+		"format:js": "wp-scripts format",
+		"update": "npx npm-check-updates -u && npm i"
+	},
+	"browserslist": [
+		"extends @wordpress/browserslist-config"
+	],
+	"postcss": {
+		"plugins": {
+			"autoprefixer": {
+				"grid": "autoplace"
+			},
+			"cssnano": {
+				"preset": [
+					"default",
+					{
+						"minifyFontValues": {
+							"removeQuotes": false
+						},
+						"colormin": false
+					}
+				]
+			},
+			"css-declaration-sorter": {
+				"order": "smacss"
+			}
+		}
+	}
 }
